Highly experimental animation rendering